# Wenget

./: .gitignore  2025-11-19-source-listlistmanifestlist.txt  2025-12-02-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-07-httpsrawgithubusercontentcomsup.txt  2026-01-03-update-install-script.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPMENT_PLAN.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.5.0.md  SOURCES.md  install.ps1  install.sh  sources-essential.json  wenpm.md
.claude/: settings.local.json
.github/workflows/: release.yml  update-manifest.yml  winget.yml
.serena/: project.yml
bucket/: README.md  manifest.json  sources_repos.txt  sources_scripts.txt
devs/: 2025-12-29-DEV_PLAN.md  2025-12-30-fix-windows-build.md  2026-01-03-重構bucket-create.md  development-plan.md  fix-musl-package-selection.md
devs/done/: 2025-01-03-add-multiple-platforms-to-bucket.md  2025-01-05-安裝腳本-init-fix.md  2025-12-02-repofailed-to-find-exec.txt  2025-12-03-2025-12-02-caveat-the-messages-below-wer.txt  2025-12-03-list-allbuckethttpsrawgithubuserconten.txt  2025-12-08-caveat-the-messages-below-were-generated-by-the-u.txt  2025-12-08-fix_linux_update_self.txt  2025-12-29-DEV_PLAN.md  2025-12-29-optmize.md  2025-12-30-EVALUATION_REPORT.md  2025-12-30-Fixing Wenget CLI Features.md  2025-12-30-fix-linux-update.md  2026-01-02-refactoring-evaluation.md  2026-01-02-重構.md  2026-01-02-重構bucket.md  2026-01-04-統一平台提取邏輯.md  2026-01-08-alias子命令(放棄).md  2026-01-08-優化-增加解析無壓縮binary.md  2026-01-08-改使用gpinstall.md  2026-01-08-重做優化.md
docs/: RESOURCE_FILTERING_RULES.md
docs/superpowers/plans/: 2026-03-18-update-scripts-and-self-check.md  2026-03-20-delete-fix-and-installed-json-redesign.md  2026-04-10-update-default-binary-asset-matching.md
docs/superpowers/specs/: 2026-03-18-update-scripts-and-self-check-design.md  2026-03-20-delete-fix-and-installed-json-redesign.md  2026-04-10-update-command-behavior-design.md  2026-04-10-update-default-binary-asset-matching-design.md
plan/: DEVELOPMENT_PLAN.md  wenget.md
src/: bucket.rs  cache.rs  cli.rs  main.rs  package_resolver.rs
src/commands/: add.rs  bucket.rs  config.rs  delete.rs  info.rs  init.rs  install.rs  list.rs  mod.rs  rename.rs  repair.rs  search.rs  source.rs  update.rs  upgrade.rs
src/core/: config.rs  manifest.rs  mod.rs  paths.rs  platform.rs  preferences.rs  privilege.rs  registry.rs  repair.rs
src/downloader/: mod.rs
src/installer/: extractor.rs  input_detector.rs  local.rs  mod.rs  script.rs  shim.rs  symlink.rs
src/providers/: base.rs  github.rs  mod.rs
src/utils/: http.rs  mod.rs  prompt.rs
