[package]
name = "wenget"
version = "0.3.0"
edition = "2021"
authors = ["wen"]
description = "A cross-platform package manager for GitHub binaries"
license = "MIT"
repository = "https://github.com/superyngo/Wenget"
keywords = ["package-manager", "github", "binary", "portable"]
categories = ["command-line-utilities"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Archive handling
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
sevenz-rust = "0.6"
bzip2 = "0.5"

# Progress bar
indicatif = "0.17"

# Colored output
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
glob = "0.3"
pathdiff = "0.2"
dialoguer = "0.11"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
winreg = "0.55"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
